Polishing views and link CSS

--- a/db/seeds/perfumes.yml
+++ b/db/seeds/perfumes.yml
@@ -162,7 +162,7 @@
     - 'Patchouli'
     - 'Amber'
 - identifiers:
-  - name: 'Gucci Guilty Black Pour Gemme'
+  - name: 'Gucci Guilty Black Pour Femme'
   - brand_id_by_name: 'Gucci'
   - year: 2010
   perfume_notes:
